overlays/my-awesome-app/prod/limits.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-python
spec:
  template:
    spec:
      containers:
      - name: test-python
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "1m"
