overlays/my-awesome-app/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mywebapp
  namespace: default
spec:
  type: ClusterIP
  ports:
    - name: python
      port: 80
      targetPort: 6000
      nodePort: null
  selector:
    app: python
