overlays/my-awesome-app/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python
spec:
  rules:
    - host: python.bbdev-dev.cyou
      http:
        paths:
          - backend:
              service:
                name: python
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - python.bbdev-dev.cyou
      secretName: python-tls
